<resources>
    <string name="app_name">Coffee Shop</string>
    <string name="chocolate">Chocolate</string>
    <string name="choose_toppings">Choose Toppings:</string>
    <string name="cream">Cream</string>
    <string name="order">Order</string>
    <string name="quantity">Quantity</string>
    <string name="n_a">N/A</string>
    <string name="order_summary">Order Summary</string>
</resources>