<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7EABE"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Choose_Toppings_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_toppings"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="246dp"
        android:layout_height="189dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="83dp"
        app:layout_constraintBottom_toTopOf="@+id/Choose_Toppings_Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coffeebeans" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="4dp"
        android:text="@string/quantity"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/Order_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#513A06"
        android:onClick="Order"
        android:text="@string/order"
        app:layout_constraintBottom_toTopOf="@+id/Order_Summary_Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/Order_Summary_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="235dp"
        android:text="@string/order_summary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Order_Button"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/Order_Summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="193dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="193dp"
        android:layout_marginBottom="182dp"
        android:text="@string/n_a"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Order_Button"
        tools:visibility="invisible" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="256dp"
        android:layout_height="57dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/Order_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <Button
            android:id="@+id/Minus_Quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#583F07"
            android:onClick="DecrementQuantity"
            android:text="-" />

        <TextView
            android:id="@+id/Quantity"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Plus_Quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#624918"
            android:onClick="IncrementQuantity"
            android:text="+" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="279dp"
        android:layout_height="55dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="62dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Choose_Toppings_Text">

        <CheckBox
            android:id="@+id/Cream_CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cream" />

        <CheckBox
            android:id="@+id/Chocolate_CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/chocolate" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="210dp"
        android:fontFamily="cursive"
        android:text="JJ's Coffee Shop"
        android:textStyle="bold|italic"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>